[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://data/textures/Dark/texture_01.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="CubeMesh" id=2]
material = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 20, 14, 1 )

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.568627, 0.737255, 0.898039, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.502835, 0.7379, -0.450179, -0.621857, 0.670557, 0.404534, 0.600376, 0.0765326, 0.796047, -8.73829, 6.87771, 9.37318 )
shadow_enabled = true

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, -0.1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -2.407, 3.906, 2.508 )

[node name="Camera" type="Camera" parent="CameraPivot"]

[node name="ClickMarker" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23079, 0 )
speed = 80.0

[connection signal="input_event" from="Floor" to="." method="_on_Floor_input_event"]
[connection signal="on_player_reach_target" from="Player" to="." method="_on_Player_on_player_reach_target"]
